@@ -22,8 +22,10 @@
 package org.sakaiproject.portal.charon.handlers;
 
 import java.io.IOException;
+import java.text.DateFormat;
+import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -37,23 +39,28 @@ import javax.servlet.http.HttpServletResponse;
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.text.StringEscapeUtils;
+import org.sakaiproject.authz.api.AuthzGroupService;
 import org.sakaiproject.authz.api.Role;
-import org.sakaiproject.authz.cover.SecurityService;
+import org.sakaiproject.authz.api.SecurityService;
+import org.sakaiproject.component.api.ServerConfigurationService;
 import org.sakaiproject.component.cover.ComponentManager;
-import org.sakaiproject.component.cover.ServerConfigurationService;
+import org.sakaiproject.coursemanagement.api.CourseManagementService;
+import org.sakaiproject.coursemanagement.api.exception.IdNotFoundException;
 import org.sakaiproject.entity.api.ResourceProperties;
+import org.sakaiproject.entity.api.ResourcePropertiesEdit;
 import org.sakaiproject.event.api.Event;
-import org.sakaiproject.event.cover.EventTrackingService;
+import org.sakaiproject.event.api.EventTrackingService;
 import org.sakaiproject.exception.IdUnusedException;
 import org.sakaiproject.exception.PermissionException;
 import org.sakaiproject.portal.api.Portal;
+import org.sakaiproject.portal.api.PortalConstants;
 import org.sakaiproject.portal.api.PortalHandlerException;
 import org.sakaiproject.portal.api.PortalRenderContext;
 import org.sakaiproject.portal.api.PortalService;
 import org.sakaiproject.portal.api.SiteView;
 import org.sakaiproject.portal.api.StoredState;
 import org.sakaiproject.portal.charon.site.AllSitesViewImpl;
-import org.sakaiproject.portal.charon.site.PortalSiteHelperImpl;
 import org.sakaiproject.portal.util.ByteArrayServletResponse;
 import org.sakaiproject.portal.util.ToolUtils;
 import org.sakaiproject.portal.util.URLUtils;
@@ -61,21 +68,23 @@ import org.sakaiproject.profile2.logic.ProfileImageLogic;
 import org.sakaiproject.presence.api.PresenceService;
 import org.sakaiproject.site.api.Site;
 import org.sakaiproject.site.api.SitePage;
+import org.sakaiproject.site.api.SiteService;
 import org.sakaiproject.site.api.ToolConfiguration;
-import org.sakaiproject.site.cover.SiteService;
-import org.sakaiproject.thread_local.cover.ThreadLocalManager;
+import org.sakaiproject.thread_local.api.ThreadLocalManager;
+import org.sakaiproject.time.api.UserTimeService;
 import org.sakaiproject.tool.api.ActiveTool;
+import org.sakaiproject.tool.api.ActiveToolManager;
 import org.sakaiproject.tool.api.Session;
+import org.sakaiproject.tool.api.SessionManager;
 import org.sakaiproject.tool.api.Tool;
 import org.sakaiproject.tool.api.ToolException;
 import org.sakaiproject.tool.api.ToolManager;
 import org.sakaiproject.tool.api.ToolSession;
-import org.sakaiproject.tool.cover.ActiveToolManager;
-import org.sakaiproject.tool.cover.SessionManager;
 import org.sakaiproject.user.api.Preferences;
+import org.sakaiproject.user.api.PreferencesEdit;
+import org.sakaiproject.user.api.PreferencesService;
+import org.sakaiproject.user.api.UserDirectoryService;
 import org.sakaiproject.user.api.UserNotDefinedException;
-import org.sakaiproject.user.cover.PreferencesService;
-import org.sakaiproject.user.cover.UserDirectoryService;
 import org.sakaiproject.util.ResourceLoader;
 import org.sakaiproject.util.Validator;
 import org.sakaiproject.util.Web;
@@ -99,15 +108,16 @@ public class SiteHandler extends WorksiteHandler
 
 	private static final String INCLUDE_TABS = "include-tabs";
 
-	private static final String URL_FRAGMENT = "site";
-	
+	// Cannot be static to allow for this class to be extended at a different fragment
+	protected String URL_FRAGMENT = "site";
+
 	private static ResourceLoader rb = new ResourceLoader("sitenav");
 	
 	// When these strings appear in the URL they will be replaced by a calculated value based on the context.
 	// This can be replaced by the users myworkspace.
-	private String mutableSitename ="-";
+	private final String mutableSitename;
 	// This can be replaced by the page on which a tool appears.
-	private String mutablePagename ="-";
+	private final String mutablePagename;
 
 	// SAK-29180 - Normalize the properties, keeping the legacy pda sakai.properties names through Sakai-11 at least
 	private static final String BYPASS_URL_PROP = "portal.bypass";
@@ -136,23 +146,56 @@ public class SiteHandler extends WorksiteHandler
 	private static final String SAK_PROP_SHOW_FAV_STARS_ON_ALL = "portal.favoriteSitesBar.showFavStarsOnAllSites";
 	private static final boolean SAK_PROP_SHOW_FAV_STARS_ON_ALL_DFLT = true;
 
+	private static final String SAK_PROP_SHOW_SITE_LABELS = "portal.siteList.siteLabels";
+	private static final boolean SAK_PROP_SHOW_SITE_LABELS_DFLT = true;
+
 	private static final long AUTO_FAVORITES_REFRESH_INTERVAL_MS = 30000;
 
-	protected ProfileImageLogic imageLogic;
+	private final ActiveToolManager activeToolManager;
+	private final AuthzGroupService authzGroupService;
+	private final CourseManagementService courseManagementService;
+	private final EventTrackingService eventTrackingService;
+	private final PresenceService presenceService;
+	private final PreferencesService preferencesService;
+	private final ProfileImageLogic profileImageLogic;
+	private final SecurityService securityService;
+	private final ServerConfigurationService serverConfigurationService;
+	private final SessionManager sessionManager;
+	private final SiteService siteService;
+	private final ThreadLocalManager threadLocalManager;
+	private final UserDirectoryService userDirectoryService;
+	private final UserTimeService userTimeService;
 
-	public SiteHandler()
-	{
-		setUrlFragment(SiteHandler.URL_FRAGMENT);
-		mutableSitename =  ServerConfigurationService.getString("portal.mutable.sitename", "-");
-		mutablePagename =  ServerConfigurationService.getString("portal.mutable.pagename", "-");
-		imageLogic = ComponentManager.get(ProfileImageLogic.class);
+	public SiteHandler() {
+		activeToolManager = ComponentManager.get(ActiveToolManager.class);
+		authzGroupService = ComponentManager.get(AuthzGroupService.class);
+		courseManagementService = ComponentManager.get(CourseManagementService.class);
+		eventTrackingService = ComponentManager.get(EventTrackingService.class);
+		preferencesService = ComponentManager.get(PreferencesService.class);
+		presenceService = ComponentManager.get(PresenceService.class);
+		profileImageLogic = ComponentManager.get(ProfileImageLogic.class);
+		securityService = ComponentManager.get(SecurityService.class);
+		serverConfigurationService = ComponentManager.get(ServerConfigurationService.class);
+		sessionManager = ComponentManager.get(SessionManager.class);
+		siteService = ComponentManager.get(SiteService.class);
+		threadLocalManager = ComponentManager.get(ThreadLocalManager.class);
+		userDirectoryService = ComponentManager.get(UserDirectoryService.class);
+		userTimeService = ComponentManager.get(UserTimeService.class);
+
+		// Allow any sub-classes to register their own URL_FRAGMENT
+		// https://stackoverflow.com/questions/41566202/possible-to-avoid-default-call-to-super-in-java
+		if(this.getClass() == SiteHandler.class) {
+			setUrlFragment(URL_FRAGMENT);
+		}
+		mutableSitename =  serverConfigurationService.getString("portal.mutable.sitename", "-");
+		mutablePagename =  serverConfigurationService.getString("portal.mutable.pagename", "-");
 	}
 
 	@Override
 	public int doGet(String[] parts, HttpServletRequest req, HttpServletResponse res,
 			Session session) throws PortalHandlerException
 	{
-		if ((parts.length >= 2) && (parts[1].equals(SiteHandler.URL_FRAGMENT)))
+		if ((parts.length >= 2) && (parts[1].equals(URL_FRAGMENT)))
 		{
 			// This is part of the main portal so we simply remove the attribute
 			session.setAttribute(PortalService.SAKAI_CONTROLLING_PORTAL, null);
@@ -203,13 +246,9 @@ public class SiteHandler extends WorksiteHandler
 			toolId = parts[4];
 			String toolUrl = req.getContextPath() + "/site/" + siteId + "/tool"
 					+ Web.makePath(parts, 4, parts.length);
-			String queryString = Validator.generateQueryString(req);
-			if (queryString != null)
-			{
-				toolUrl = toolUrl + "?" + queryString;
-			}
 			portalService.setResetState("true");
-			res.sendRedirect(toolUrl);
+			res.addHeader("Cache-Control", "no-cache");
+			res.sendRedirect(URLUtils.sanitisePath(toolUrl));
 			return RESET_DONE;
 		}
 
@@ -237,7 +276,7 @@ public class SiteHandler extends WorksiteHandler
 			boolean hasJSR168 = false;
 			if (page != null)
 			{
-				Session s = SessionManager.getCurrentSession();
+				Session s = sessionManager.getCurrentSession();
 				Iterator<ToolConfiguration> toolz = page.getTools().iterator();
 				while(toolz.hasNext()){
 					ToolConfiguration pageTool = toolz.next();
@@ -247,18 +286,12 @@ public class SiteHandler extends WorksiteHandler
 				}
 			}
 
-			String pageUrl = req.getContextPath() + "/site/" + siteId + "/page"
-					+ Web.makePath(parts, 4, parts.length);
+			String pageUrl = URLUtils.sanitisePath(req.getContextPath() + "/site/" + siteId + "/page"
+					+ Web.makePath(parts, 4, parts.length));
 
-			String queryString = Validator.generateQueryString(req);
-			if (queryString != null)
-			{
-				pageUrl = pageUrl + "?" + queryString;
-				if ( hasJSR168 ) pageUrl = pageUrl + "&sakai.state.reset=true";
-			} else {
-				if ( hasJSR168 ) pageUrl = pageUrl + "?sakai.state.reset=true";
-			}
+			if ( hasJSR168 ) pageUrl = pageUrl + "?sakai.state.reset=true";
 			portalService.setResetState("true");
+			res.addHeader("Cache-Control", "no-cache");
 			res.sendRedirect(pageUrl);
 			return RESET_DONE;
 		}
@@ -284,9 +317,8 @@ public class SiteHandler extends WorksiteHandler
 	public void doSite(HttpServletRequest req, HttpServletResponse res, Session session,
 			String siteId, String pageId, String toolId,
 			String commonToolId, String [] parts, String toolContextPath) throws ToolException,
-			IOException
-	{		
-				
+			IOException {
+
 		// default site if not set
 		String userId = session.getUserId();
 		if (siteId == null)
@@ -296,19 +328,19 @@ public class SiteHandler extends WorksiteHandler
 				siteId = portal.getSiteHelper().getGatewaySiteId();
 				if (siteId == null)
 				{
-					siteId = ServerConfigurationService.getGatewaySiteId();
+					siteId = serverConfigurationService.getGatewaySiteId();
 				}
 			}
 			else
 			{
 				// TODO Should maybe switch to portal.getSiteHelper().getMyWorkspace()
-				AllSitesViewImpl allSites = (AllSitesViewImpl)portal.getSiteHelper().getSitesView(SiteView.View.ALL_SITES_VIEW, req, session, siteId);
-				List<Map> sites = (List<Map>)allSites.getRenderContextObject();
+				AllSitesViewImpl allSites = (AllSitesViewImpl) portal.getSiteHelper().getSitesView(SiteView.View.ALL_SITES_VIEW, req, session, siteId);
+				List<Map> sites = (List<Map>) allSites.getRenderContextObject();
 				if (sites.size() > 0) {
-					siteId = (String)sites.get(0).get("siteId");
+					siteId = (String) sites.get(0).get("siteId");
+				} else {
+					siteId = siteService.getUserSiteId(userId);
 				}
-				else
-					siteId = SiteService.getUserSiteId(userId);
 			}
 		}
 
@@ -319,34 +351,29 @@ public class SiteHandler extends WorksiteHandler
 		
 		// check for a mutable site to be resolved here
 		if (mutableSitename.equalsIgnoreCase(siteId) && (session.getUserId() != null)) {
-			siteId = SiteService.getUserSiteId(userId);
+			siteId = siteService.getUserSiteId(userId);
 		}
 
 		// find the site, for visiting
 		boolean siteDenied = false;
 		Site site = null;
-		try
-		{
+		try {
 			// This should understand aliases as well as IDs
 			site = portal.getSiteHelper().getSiteVisit(siteId);
 			
 			// SAK-20509 remap the siteId from the Site object we now have, since it may have originally been an alias, but has since been translated.
 			siteId = site.getId();
-			
-		}
-		catch (IdUnusedException e)
-		{
-		}
-		catch (PermissionException e)
-		{
-			if (ServerConfigurationService.getBoolean("portal.redirectJoin", true) &&
-					userId != null && portal.getSiteHelper().isJoinable(siteId, userId))
-			{
+		} catch (IdUnusedException e) {
+			log.warn("Site not found [{}], {}", siteId, e.toString());
+		} catch (PermissionException e) {
+			if (serverConfigurationService.getBoolean("portal.redirectJoin", true)
+					&& userId != null
+					&& portal.getSiteHelper().isJoinable(siteId, userId)) {
 				String redirectUrl = Web.returnUrl(req, "/join/"+siteId);
+				res.addHeader("Cache-Control", "no-cache");
 				res.sendRedirect(redirectUrl);
 				return;
 			}
-
 			siteDenied = true;
 		}
 
@@ -369,8 +396,8 @@ public class SiteHandler extends WorksiteHandler
 				// It is also helpful for event log analysis for user trouble or bad behavior.
 				if (siteDenied)
 				{
-					Event event = EventTrackingService.newEvent(SiteService.EVENT_SITE_VISIT_DENIED, siteId, false);
-					EventTrackingService.post(event);
+					Event event = eventTrackingService.newEvent(SiteService.EVENT_SITE_VISIT_DENIED, siteId, false);
+					eventTrackingService.post(event);
 				}
 				portal.doError(req, res, session, Portal.ERROR_SITE);
 			}
@@ -378,7 +405,7 @@ public class SiteHandler extends WorksiteHandler
 		}
 		
 		// Supports urls like: /portal/site/{SITEID}/sakai.announcements
-		if(site != null && commonToolId != null)
+		if (site != null && commonToolId != null)
 		{
 			ToolConfiguration tc = null;
 			if(!commonToolId.startsWith("sakai."))
@@ -399,7 +426,7 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		// Find the pageId looking backwards through the toolId
-		if(site != null && pageId == null && toolId != null ) {
+		if (site != null && pageId == null && toolId != null ) {
 			SitePage p = (SitePage) ToolUtils.getPageForTool(site, toolId);
 			if ( p != null ) pageId = p.getId();
 		}
@@ -415,39 +442,34 @@ public class SiteHandler extends WorksiteHandler
 		if (mutablePagename.equalsIgnoreCase(pageId)) {
 			pageId = findPageIdFromToolId(pageId, URLUtils.getSafePathInfo(req), site);
 		}
-		
+
 		// clear the last page visited
 		session.removeAttribute(Portal.ATTR_SITE_PAGE + siteId);
 
 		// SAK-29138 - form a context sensitive title
-		List<String> providers = PortalSiteHelperImpl.getProviderIDsForSites(((List<Site>) Arrays.asList(new Site[] { site }))).get(site.getReference());
-		String title = ServerConfigurationService.getString("ui.service","Sakai") + " : "
+		List<String> providers = authzGroupService.getProviderIDsForRealms(List.of(site.getReference())).get(site.getReference());
+		String title = serverConfigurationService.getString("ui.service","Sakai") + " : "
 				+ portal.getSiteHelper().getUserSpecificSiteTitle(site, false, false, providers);
 
 		// Lookup the page in the site - enforcing access control
 		// business rules
 		SitePage page = portal.getSiteHelper().lookupSitePage(pageId, site);
-		if (page != null)
-		{
-			if (ServerConfigurationService.getBoolean("portal.rememberSitePage", true)) {
-				// store the last page visited
-				session.setAttribute(Portal.ATTR_SITE_PAGE + siteId, page.getId());
-			}
+		if (page != null) {
 			title += " : " + page.getTitle();
 		}
 
 		// Check for incomplete URLs in the case of inlined tools
-		boolean trinity = ServerConfigurationService.getBoolean(ToolUtils.PORTAL_INLINE_EXPERIMENTAL, ToolUtils.PORTAL_INLINE_EXPERIMENTAL_DEFAULT);
+		boolean trinity = serverConfigurationService.getBoolean(ToolUtils.PORTAL_INLINE_EXPERIMENTAL, ToolUtils.PORTAL_INLINE_EXPERIMENTAL_DEFAULT);
 		if (trinity && toolId == null) {
 			String pagerefUrl = ToolUtils.getPageUrl(req, site, page, getUrlFragment(),
 				false, null, null);
 			// http://localhost:8080/portal/site/963b28b/tool/0996adf
 			String[] pieces = pagerefUrl.split("/");
 			if ( pieces.length > 6 && "tool".equals(pieces[6]) ) {
-				// SAK-25503 - This probably should be a log.debug later
 				String queryString = req.getQueryString();
-				if ( queryString != null ) pagerefUrl = pagerefUrl + '?' + queryString;
-				log.warn("Redirecting tool inline url: "+pagerefUrl);
+				if ( queryString != null ) pagerefUrl = URLUtils.sanitisePath(pagerefUrl) + '?' + queryString;
+				log.debug("Redirecting tool inline url: "+pagerefUrl);
+				res.addHeader("Cache-Control", "no-cache");
 				res.sendRedirect(pagerefUrl);
 				return;
 			}
@@ -459,9 +481,10 @@ public class SiteHandler extends WorksiteHandler
 		boolean allowBuffer = false;
 		Object BC = null;
 
+
 		ToolConfiguration siteTool = null;
 		if ( toolId != null ) {
-			siteTool = SiteService.findTool(toolId);
+			siteTool = siteService.findTool(toolId);
 			if ( siteTool != null && parts.length >= 5 ) {
 				commonToolId = siteTool.getToolId();
 
@@ -478,14 +501,14 @@ public class SiteHandler extends WorksiteHandler
 
 					if ( matched ) {
 						log.debug("Bypassing buffer to forwardTool per configuration");
-						ActiveTool tool = ActiveToolManager.getActiveTool(commonToolId);
+						ActiveTool tool = activeToolManager.getActiveTool(commonToolId);
 						portal.forwardTool(tool, req, res, siteTool,
 							siteTool.getSkin(), TCP, toolPathInfo);
 						return;
 					}
 					// Inform calls to includeTool() that the default is 
 					// this thread is inlining a tool.
-					ThreadLocalManager.set("sakai:inline-tool","true");
+					threadLocalManager.set("sakai:inline-tool","true");
 				}
 			}
 		}
@@ -494,8 +517,35 @@ public class SiteHandler extends WorksiteHandler
 		String siteType = portal.calcSiteType(siteId);
 
 		// Note that this does not call includeTool()
-		PortalRenderContext rcontext = portal.startPageContext(siteType, title, site
-				.getSkin(), req, site);
+		PortalRenderContext rcontext = portal.startPageContext(siteType, title, site.getSkin(), req, site);
+
+		if (userId != null) {
+			final Preferences readOnlyPrefs = preferencesService.getPreferences(userId);
+			final ResourceProperties siteNavProps = readOnlyPrefs.getProperties(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
+			final String currentExpanded = siteNavProps.getProperty(PortalConstants.PROP_CURRENT_EXPANDED);
+			final String expandedSite = siteNavProps.getProperty(PortalConstants.PROP_EXPANDED_SITE);
+
+			// We need to modify the user's properties. We need to lock the table.
+			if (!StringUtils.equals(currentExpanded, "true") || !StringUtils.equals(expandedSite, siteId)) {
+				PreferencesEdit prefs = null;
+				try {
+					prefs = preferencesService.edit(userId);
+					ResourcePropertiesEdit props = prefs.getPropertiesEdit(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
+					props.addProperty(PortalConstants.PROP_CURRENT_EXPANDED, "true");
+					props.addProperty(PortalConstants.PROP_EXPANDED_SITE, siteId);
+
+					boolean themeEnabled = serverConfigurationService.getBoolean(PortalConstants.PROP_PORTAL_THEMES, true);
+					if (!themeEnabled) {
+						prefs.getPropertiesEdit(org.sakaiproject.user.api.PreferencesService.USER_SELECTED_UI_THEME_PREFS).addProperty("theme", "sakaiUserTheme-notSet");
+					}
+				} catch (Exception any) {
+					log.warn("Exception caught whilst setting expanded navigation or theme properties: {}", any.toString());
+					if (prefs != null) preferencesService.cancel(prefs);
+				} finally {
+					if (prefs != null) preferencesService.commit(prefs);
+				}
+			}
+		}
 
 		if ( allowBuffer ) {
 			log.debug("Starting the buffer process...");
@@ -540,60 +590,98 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		rcontext.put("siteId", siteId);
-		boolean showShortDescription = Boolean.valueOf(ServerConfigurationService.getBoolean("portal.title.shortdescription.show", false));
+		boolean showShortDescription = Boolean.valueOf(serverConfigurationService.getBoolean("portal.title.shortdescription.show", false));
 
 		if (showShortDescription) {
 			rcontext.put("shortDescription", Web.escapeHtml(site.getShortDescription()));
 		}
 		
-		if (SiteService.isUserSite(siteId)){
+		if (siteService.isUserSite(siteId)){
 			rcontext.put("siteTitle", rb.getString("sit_mywor") );
+			rcontext.put("siteUrl", site.getUrl());
 			rcontext.put("siteTitleTruncated", rb.getString("sit_mywor") );
 			rcontext.put("isUserSite", true);
 		}else{
 			rcontext.put("siteTitle", portal.getSiteHelper().getUserSpecificSiteTitle(site, false, true, providers));
+			rcontext.put("siteUrl", site.getUrl());
 			rcontext.put("siteTitleTruncated", Validator.escapeHtml(portal.getSiteHelper().getUserSpecificSiteTitle(site, true, false, providers)));
 			rcontext.put("isUserSite", false);
 		}
 		
-		rcontext.put("showFavStarsInSitesBar",ServerConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS, SAK_PROP_SHOW_FAV_STARS_DFLT));
-		rcontext.put("showFavStarsOnAllFavSites",ServerConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS_ON_ALL, SAK_PROP_SHOW_FAV_STARS_ON_ALL_DFLT));
+		rcontext.put("showFavStarsInSitesBar", serverConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS, SAK_PROP_SHOW_FAV_STARS_DFLT));
+		rcontext.put("showFavStarsOnAllFavSites", serverConfigurationService.getBoolean(SAK_PROP_SHOW_FAV_STARS_ON_ALL, SAK_PROP_SHOW_FAV_STARS_ON_ALL_DFLT));
+
+		rcontext.put("showSiteLabels", serverConfigurationService.getBoolean(SAK_PROP_SHOW_SITE_LABELS, SAK_PROP_SHOW_SITE_LABELS_DFLT));
 		
+		rcontext.put("activePageId", page.getId());
+
 		addLocale(rcontext, site, session.getUserId());
 
 		addTimeInfo(rcontext);
-		
-		includeSiteNav(rcontext, req, session, siteId);
+
+		includeSiteNav(rcontext, req, session, siteId, toolId);
 
 		includeWorksite(rcontext, res, req, session, site, page, toolContextPath,
 					getUrlFragment());
-
-		// Include sub-sites if appropriate
-		// TODO: Think through whether we want reset tools or not
-		portal.includeSubSites(rcontext, req, session, siteId, req.getContextPath()
-				+ req.getServletPath(), getUrlFragment(),
-				/* resetTools */false);
 
 		portal.includeBottom(rcontext, site);
 
 		//Log the visit into SAKAI_EVENT - begin
 		try{
-			boolean presenceEvents = ServerConfigurationService.getBoolean("presence.events.log", true);
+			boolean presenceEvents = serverConfigurationService.getBoolean("presence.events.log", true);
 			if (presenceEvents)
-				org.sakaiproject.presence.cover.PresenceService.setPresence(siteId + PresenceService.PRESENCE_SUFFIX);
+				presenceService.setPresence(siteId + PresenceService.PRESENCE_SUFFIX);
 		}catch(Exception e){}
 		//End - log the visit into SAKAI_EVENT		
 
-		rcontext.put("currentUrlPath", RequestFilter.serverUrl(req) + req.getContextPath()
-				+ URLUtils.getSafePathInfo(req));
+		rcontext.put("currentUrlPath", RequestFilter.serverUrl(req) + req.getContextPath() + URLUtils.getSafePathInfo(req));
 
-		rcontext.put("usePortalSearch", ServerConfigurationService.getBoolean("portal.search.enabled", true)
-		    && ServerConfigurationService.getBoolean("search.enable", false));
-		rcontext.put("portalSearchPageSize", ServerConfigurationService.getString("portal.search.pageSize", "10"));
+		rcontext.put("usePortalSearch", serverConfigurationService.getBoolean("portal.search.enabled", true)
+				&& serverConfigurationService.getBoolean("search.enable", false));
+		rcontext.put("portalSearchPageSize", serverConfigurationService.getString("portal.search.pageSize", "10"));
 
 		//Show a confirm dialog when publishing an unpublished site.
-		rcontext.put("publishSiteDialogEnabled", ServerConfigurationService.getBoolean("portal.publish.site.confirm.enabled", false));
+		rcontext.put("publishSiteDialogEnabled", serverConfigurationService.getBoolean("portal.publish.site.confirm.enabled", false));
+		Map<String, String> toolTitles = new HashMap<>();
+		site.getPages().forEach(pageNow -> {
 
+			List<ToolConfiguration> tools = pageNow.getTools();
+			if (CollectionUtils.isNotEmpty(tools)) {
+				ToolConfiguration firstTool = pageNow.getTools().get(0);
+				toolTitles.put(firstTool.getToolId(), StringEscapeUtils.escapeJson(firstTool.getTitle()));
+				if (firstTool.getToolId().equals("sakai.siteinfo")) {
+					rcontext.put("manageurl", pageNow.getUrl() + "?sakai_action=doMenu_edit_access");
+				}
+			}
+		});
+		rcontext.put("toolTitles", toolTitles);
+
+		if (StringUtils.equals(site.getProperties().getProperty("publish_type"), "scheduled")) {	// custom-scheduled availability date
+			Date scheduledDate = userTimeService.parseISODateInUserTimezone(site.getProperties().getProperty("publish_date"));
+			if (scheduledDate.toInstant().isAfter(Instant.now())) {
+				rcontext.put("scheduledate", userTimeService.dateTimeFormat(scheduledDate, rb.getLocale(), DateFormat.SHORT));
+			} else {
+				// schedule date is in the past so set to false
+				rcontext.put("scheduledate", false);
+			}
+		} else if (StringUtils.equals(site.getProperties().getProperty("publish_type"), "auto")) {	// automatically-managed publishing
+			try {
+				if (courseManagementService.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate() != null) {
+					long leadtime = serverConfigurationService.getInt("course_site_publish_service.num_days_before_term_starts", 0) * 1000L * 60L * 60L * 24L;
+					Date publishDate = new Date(courseManagementService.getAcademicSession(site.getProperties().getProperty("term_eid")).getStartDate().getTime() - leadtime);
+					if (publishDate.toInstant().isAfter(Instant.now())) {
+						rcontext.put("scheduledate", userTimeService.dateFormat(publishDate, rb.getLocale(), DateFormat.LONG));
+					} else {
+						rcontext.put("scheduledate", false);
+					}
+				} else {
+					rcontext.put("scheduledate", false);
+				}
+			} catch(IdNotFoundException ignored) {
+				log.debug("Error getting term for auto start term date.");
+				rcontext.put("scheduledate", false);
+			}
+		}
 		//Find any quick links ready for display in the top navigation bar,
 		//they can be set per site or for the whole portal.
 		if (userId != null) {
@@ -605,6 +693,9 @@ public class SiteHandler extends WorksiteHandler
 				rcontext.put("quickLinks", quickLinks);
 			}
 		}
+
+
+
 		doSendResponse(rcontext, res, null);
 
 		StoredState ss = portalService.getStoredState();
@@ -613,7 +704,6 @@ public class SiteHandler extends WorksiteHandler
 			// This request is the destination of the request
 			portalService.setStoredState(null);
 		}
-
 	}
 
 	/*
@@ -655,139 +745,96 @@ public class SiteHandler extends WorksiteHandler
 	 * 
 	 * @param rcontext
 	 * @param res
-	 * @param object
-	 * @param b
+	 * @param contentType
 	 * @throws IOException
 	 */
-	protected void doSendResponse(PortalRenderContext rcontext, HttpServletResponse res,
-			String contentType) throws IOException
-	{
+	protected void doSendResponse(PortalRenderContext rcontext, HttpServletResponse res, String contentType) throws IOException {
 		portal.sendResponse(rcontext, res, "site", null);
 	}
 
-	protected void includeSiteNav(PortalRenderContext rcontext, HttpServletRequest req,
-			Session session, String siteId)
+	protected void includeSiteNav(PortalRenderContext rcontext, HttpServletRequest req, Session session, String siteId, String toolId)
 	{
-		if (session.getUserId() != null) {
-			refreshAutoFavorites(session);
-		}
-
 		if (rcontext.uses(INCLUDE_SITE_NAV))
 		{
 			boolean loggedIn = session.getUserId() != null;
-			boolean topLogin = ServerConfigurationService.getBoolean("top.login", true);
+			boolean topLogin = serverConfigurationService.getBoolean("top.login", true);
+			String accessibilityURL = serverConfigurationService.getString("accessibility.url");
 
-			String accessibilityURL = ServerConfigurationService
-					.getString("accessibility.url");
-			rcontext.put("siteNavHasAccessibilityURL", Boolean
-					.valueOf((accessibilityURL != null && !accessibilityURL.equals(""))));
+			rcontext.put("siteNavHasAccessibilityURL", Boolean.valueOf((accessibilityURL != null && !accessibilityURL.equals(""))));
 			rcontext.put("siteNavAccessibilityURL", accessibilityURL);
 			rcontext.put("siteNavTopLogin", Boolean.valueOf(topLogin));
 			rcontext.put("siteNavLoggedIn", Boolean.valueOf(loggedIn));
+			rcontext.put("currentSiteId", siteId);
+			rcontext.put("sidebarSites", portal.getSiteHelper().getContextSitesWithPages(req, siteId, null, loggedIn));
 
 			try
 			{
 				if (loggedIn)
 				{
 					includeLogo(rcontext, req, session, siteId);
-					includeTabs(rcontext, req, session, siteId, getUrlFragment(), false);
-					rcontext.put("picEditorEnabled", imageLogic.isPicEditorEnabled());
+					includeTabs(rcontext, req, session, siteId, toolId, getUrlFragment(), false);
+					rcontext.put("picEditorEnabled", profileImageLogic.isPicEditorEnabled());
 				}
 				else
 				{
 					includeLogo(rcontext, req, session, siteId);
 					if (portal.getSiteHelper().doGatewaySiteList())
-						includeTabs(rcontext, req, session, siteId, getUrlFragment(),
-								false);
+						includeTabs(rcontext, req, session, siteId, toolId, getUrlFragment(), false);
 				}
 			}
-			catch (Exception any)
+			catch (Exception e)
 			{
+				log.warn("constructing logo and tabs, {}", e.toString());
 			}
 		}
 	}
 
-	final static String AUTO_FAVORITES_LAST_REFRESHED_TIME = "autoFavoritesLastRefreshedTime";
-
-	private void refreshAutoFavorites(Session session) {
-		Long lastRefreshTime = (Long)session.getAttribute(AUTO_FAVORITES_LAST_REFRESHED_TIME);
-
-		if (lastRefreshTime == null) {
-			lastRefreshTime = Long.valueOf(0);
-		}
-
-		long now = System.currentTimeMillis();
-
-		if ((now - lastRefreshTime) > AUTO_FAVORITES_REFRESH_INTERVAL_MS) {
-			// Fetch the list of favorites, which will in turn populate the auto favorites.
-			try {
-				new FavoritesHandler().userFavorites(session.getUserId());
-			} catch (Exception e) {
-				log.error(e.getMessage(), e);
-			}
-
-			session.setAttribute(AUTO_FAVORITES_LAST_REFRESHED_TIME, now);
-		}
-	}
-
-	public void includeLogo(PortalRenderContext rcontext, HttpServletRequest req,
-			Session session, String siteId) throws IOException
+	public void includeLogo(PortalRenderContext rcontext, HttpServletRequest req, Session session, String siteId) throws IOException
 	{
 		if (rcontext.uses(INCLUDE_LOGO))
 		{
 			String skin = getSiteSkin(siteId);
-			String skinRepo = ServerConfigurationService.getString("skin.repo");
+			String skinRepo = serverConfigurationService.getString("skin.repo");
 			rcontext.put("logoSkin", skin);
 			rcontext.put("logoSkinRepo", skinRepo);
-			String siteType = portal.calcSiteType(siteId);
-			String cssClass = (siteType != null) ? siteType : "undeterminedSiteType";
-			rcontext.put("logoSiteType", siteType);
-			rcontext.put("logoSiteClass", cssClass);
 			portal.includeLogin(rcontext, req, session);
 		}
 	}
 
-	private String getSiteSkin(String siteId)
-	{
+	private String getSiteSkin(String siteId) {
 		// First, try to get the skin the default way
-		String skin = SiteService.getSiteSkin(siteId);
+		String skin = siteService.getSiteSkin(siteId);
 		// If this fails, try to get the real site id if the site is a user site
-		if (skin == null && SiteService.isUserSite(siteId))
-		{
-			try
-			{
-				String userId = SiteService.getSiteUserId(siteId);
+		if (skin == null && siteService.isUserSite(siteId)) {
+			try {
+				String userId = siteService.getSiteUserId(siteId);
 				
 				// If the passed siteId is the users EID, convert it to the internal ID.
 				// Most lookups should be EID, if most URLs contain internal ID, this results in lots of cache misses.
-				try
-				{
-					userId = UserDirectoryService.getUserId(userId);
-				}
-				catch (UserNotDefinedException unde)
-				{
+				try {
+					userId = userDirectoryService.getUserId(userId);
+				} catch (UserNotDefinedException unde) {
 					// Ignore
 				}
-				String alternateSiteId = SiteService.getUserSiteId(userId);
-				skin = SiteService.getSiteSkin(alternateSiteId);
+				String alternateSiteId = siteService.getUserSiteId(userId);
+				skin = siteService.getSiteSkin(alternateSiteId);
 			}
-			catch (Exception e)
-			{
+			catch (Exception e) {
 				// Ignore
 			}
 		}
 
-		if (skin == null)
-		{
-			skin = ServerConfigurationService.getString("skin.default");
+		if (skin == null) {
+			skin = serverConfigurationService.getString("skin.default");
 		}
 		return skin;
 	}
 
 	public void includeTabs(PortalRenderContext rcontext, HttpServletRequest req,
-			Session session, String siteId, String prefix, boolean addLogout)
+			Session session, String siteId, String toolId, String prefix, boolean addLogout)
 			throws IOException
 	{
+
 		if (rcontext.uses(INCLUDE_TABS))
 		{
 			// for skinning
@@ -795,8 +842,7 @@ public class SiteHandler extends WorksiteHandler
 
 			// If we have turned on auto-state reset on navigation, we generate
 			// the "site-reset" "worksite-reset" and "gallery-reset" urls
-			if ("true".equalsIgnoreCase(ServerConfigurationService.getString(Portal.CONFIG_AUTO_RESET)))
-			{
+			if (serverConfigurationService.getBoolean(Portal.CONFIG_AUTO_RESET, false)) {
 				prefix = prefix + "-reset";
 			}
 
@@ -804,15 +850,16 @@ public class SiteHandler extends WorksiteHandler
 			
 			// Check to see if we display a link in the UI for swapping the view
 			boolean roleswapcheck = false; // This variable will tell the UI if we will display any role swapping component; false by default
-			String roleswitchvalue = SecurityService.getUserEffectiveRole(); // checks the session for a role swap value
-			boolean roleswitchstate = SecurityService.isUserRoleSwapped(); // This variable determines if the site is in the switched state or not; false by default
-			boolean allowroleswap = SiteService.allowRoleSwap(siteId) && !SecurityService.isSuperUser();			
+			String roleswitchvalue = securityService.getUserEffectiveRole(); // checks the session for a role swap value
+			boolean roleswitchstate = securityService.isUserRoleSwapped(); // This variable determines if the site is in the switched state or not; false by default
+			boolean allowroleswap = siteService.allowRoleSwap(siteId) && !securityService.isSuperUser();
 
 			if (roleswitchvalue != null) {
-				String switchRoleUrl = ServerConfigurationService.getPortalUrl()
+				String switchRoleUrl = serverConfigurationService.getPortalUrl()
 						+ "/role-switch-out/"
 						+ siteId
-						+ "/?panel=Main";
+						+ "/tool/"
+						+ toolId;
 				rcontext.put("roleUrlValue", roleswitchvalue);
 				rcontext.put("switchRoleUrl", switchRoleUrl);
 				roleswapcheck = true;
@@ -836,73 +883,76 @@ public class SiteHandler extends WorksiteHandler
 	            	log.error(pe.getMessage(), pe);
 	            	throw new IllegalStateException("No permission to view site!");
 	            }
-	            // this block of code will check to see if the student role exists in the site.  It will be used to determine if we need to display any student view component
-	            boolean roleInSite = false;
-            	Set<Role> roles = activeSite.getRoles();
-            	Role userRole = activeSite.getUserRole(session.getUserId()); // the user's role in the site
+				// this block of code will check to see if the student role exists in the site.
+				// It will be used to determine if we need to display any student view component
+				boolean roleInSite = false;
+				Set<Role> roles = activeSite.getRoles();
+				Role userRole = activeSite.getUserRole(session.getUserId()); // the user's role in the site
 
-            	String externalRoles = ServerConfigurationService.getString("studentview.roles"); // get the roles that can be swapped to from sakai.properties
-            	String[] svRoles = externalRoles.split(",");
-            	List<String> svRolesFinal = new ArrayList<String>();
+				String externalRoles = serverConfigurationService.getString("studentview.roles"); // get the roles that can be swapped to from sakai.properties
+				String[] svRoles = externalRoles.split(",");
+				List<String> svRolesFinal = new ArrayList<String>();
 
-            	for (Role role : roles) {
-            		for (int i = 0; i < svRoles.length; i++) {
-            			if (svRoles[i].trim().equals(role.getId())) {
-            				roleInSite = true;
-            				svRolesFinal.add(role.getId());
-            			}
-            		}
-            	}
-            	
-            	// The type check filters out some of non-standard sites where swapping roles would not apply.
-            	// The roleInSite check makes sure a role is in the site
-            	// The current user role can't be one of the roles to be swapped
-            	if (activeSite.getType() != null && roleInSite) 
-            	{
-		            String switchRoleUrl = "";
-		            
-		            //if the userRole is null, this means they are more than likely a Delegated Access user.  Since the security check has already allowed
-		            //the user to "swaproles" @allowroleswap, we know they have access to this site
-		            if (roleswitchvalue == null)
-		            {
-		            	if (svRolesFinal.size()>1)
-		            	{
-		            		rcontext.put("roleswapdropdown", true);
-							switchRoleUrl = ServerConfigurationService.getPortalUrl()
-							+ "/role-switch/"
-							+ siteId
-							+ "/";
+				for (Role role : roles) {
+					for (int i = 0; i < svRoles.length; i++) {
+						if (svRoles[i].trim().equals(role.getId())) {
+							roleInSite = true;
+							svRolesFinal.add(role.getId());
+						}
+					}
+				}
+
+				// The type check filters out some of non-standard sites where swapping roles would not apply.
+				// The roleInSite check makes sure a role is in the site
+				// The current user role can't be one of the roles to be swapped
+				if (activeSite.getType() != null && roleInSite) {
+					String switchRoleUrl = "";
+
+					//if the userRole is null, this means they are more than likely a Delegated Access user.  Since the security check has already allowed
+					//the user to "swaproles" @allowroleswap, we know they have access to this site
+					if (roleswitchvalue == null) {
+						if (svRolesFinal.size() > 1) {
+							rcontext.put("roleswapdropdown", true);
+							switchRoleUrl = serverConfigurationService.getPortalUrl()
+									+ "/role-switch/"
+									+ siteId
+									+ "/tool/"
+									+ toolId
+									+ "/";
+
 							rcontext.put("panelString", "/?panel=Main");
-		            	}
-		            	else
-		            	{
-		            		rcontext.put("roleswapdropdown", false);
-		            		switchRoleUrl = ServerConfigurationService.getPortalUrl()
-							+ "/role-switch/"
-							+ siteId
-							+ "/"
-							+ svRolesFinal.get(0)
-							+ "/?panel=Main";
-		            		rcontext.put("roleUrlValue", svRolesFinal.get(0));
-		            	}
-		            }
-		            // We'll show the swap role snippet if the current user role is not in "studentview.roles"
-		            roleswapcheck = !svRolesFinal.contains(userRole.getId());
-		            rcontext.put("siteRoles", svRolesFinal);
+						} else {
+							rcontext.put("roleswapdropdown", false);
+							switchRoleUrl = serverConfigurationService.getPortalUrl()
+									+ "/role-switch/"
+									+ siteId
+									+ "/tool/"
+									+ toolId
+									+ "/"
+									+ svRolesFinal.get(0)
+									+ "/?panel=Main";
+							rcontext.put("roleUrlValue", svRolesFinal.get(0));
+						}
+					}
+					// We'll show the swap role snippet if the current user role is not in "studentview.roles"
+					roleswapcheck = !svRolesFinal.contains(userRole.getId());
+					rcontext.put("siteRoles", svRolesFinal);
 					rcontext.put("switchRoleUrl", switchRoleUrl);
-            	}
+				}
 			}
 			
 			rcontext.put("viewAsStudentLink", Boolean.valueOf(roleswapcheck)); // this will tell our UI if we want the link for swapping roles to display
 			rcontext.put("roleSwitchState", roleswitchstate); // this will tell our UI if we are in a role swapped state or not
 			
 			int tabDisplayLabel = 1;
-			boolean toolsCollapsed = false;
+			boolean sidebarCollapsed = false;
+			boolean currentExpanded = false;
+			String expandedSite = siteId;
 			boolean toolMaximised = false;
 
 			if (loggedIn) 
 			{
-				Preferences prefs = PreferencesService.getPreferences(session.getUserId());
+				Preferences prefs = preferencesService.getPreferences(session.getUserId());
 				ResourceProperties props = prefs.getProperties(org.sakaiproject.user.api.PreferencesService.SITENAV_PREFS_KEY);
 
 				try 
@@ -915,16 +965,37 @@ public class SiteHandler extends WorksiteHandler
 				}
 
 				try {
-					toolsCollapsed = props.getBooleanProperty("toolsCollapsed");
-				} catch (Exception any) {}
+					sidebarCollapsed = props.getBooleanProperty(PortalConstants.PROP_SIDEBAR_COLLAPSED);
+				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
+					sidebarCollapsed = false;
+				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
+					log.warn("Exception caught whilst getting sidebarCollapsed: {}", any.toString());
+				}
+
+				try {
+					currentExpanded = props.getBooleanProperty(PortalConstants.PROP_CURRENT_EXPANDED);
+					expandedSite = props.getProperty(PortalConstants.PROP_EXPANDED_SITE);
+				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
+					currentExpanded = false;
+				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
+					log.warn("Exception caught whilst getting currentExpanded: {}", any.toString());
+				}
+
 
 				try {
 					toolMaximised = props.getBooleanProperty("toolMaximised");
-				} catch (Exception any) {}
+				} catch (org.sakaiproject.entity.api.EntityPropertyNotDefinedException any) {
+					toolMaximised = false;
+				} catch (org.sakaiproject.entity.api.EntityPropertyTypeException any) {
+					log.warn("Exception caught whilst getting toolMaximised: {}", any.toString());
+				}
 			}
 
 			rcontext.put("tabDisplayLabel", tabDisplayLabel);
-			rcontext.put("toolsCollapsed", Boolean.valueOf(toolsCollapsed));
+			rcontext.put(PortalConstants.PROP_SIDEBAR_COLLAPSED, Boolean.valueOf(sidebarCollapsed));
+			if (expandedSite.equals(siteId)) {
+				rcontext.put(PortalConstants.PROP_CURRENT_EXPANDED, Boolean.valueOf(currentExpanded));
+			}
 			rcontext.put("toolMaximised", Boolean.valueOf(toolMaximised));
 			
 			SiteView siteView = portal.getSiteHelper().getSitesView(
@@ -940,26 +1011,21 @@ public class SiteHandler extends WorksiteHandler
 			if (addLogout)
 			{
 				String logoutUrl = RequestFilter.serverUrl(req)
-						+ ServerConfigurationService.getString("portalPath")
+						+ serverConfigurationService.getString("portalPath")
 						+ "/logout_gallery";
 				rcontext.put("tabsLogoutUrl", logoutUrl);
 			}
 
 			boolean allowAddSite = false;
-			if(SiteService.allowAddCourseSite()) {
+			if(siteService.allowAddCourseSite()) {
 				allowAddSite = true;
-			} else if (SiteService.allowAddPortfolioSite()) {
-				allowAddSite = true;
-			} else if (SiteService.allowAddProjectSite()) {
+			} else if (siteService.allowAddProjectSite()) {
 				allowAddSite = true;
 			}
 
 			rcontext.put("allowAddSite",allowAddSite);
 		}
 	}
-
-// XXXX
-
 
 	/*
 	 * Check to see if this request should bypass buffering
@@ -973,10 +1039,10 @@ public class SiteHandler extends WorksiteHandler
 		String pattern = null;
 		Pattern p = null;
 		Matcher m = null;
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_URL_PROP, DEFAULT_BYPASS_URL);
-		pattern = ServerConfigurationService .getString(BYPASS_URL_PROP, pattern);
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_URL_PROP+"."+commonToolId, pattern);
-		pattern = ServerConfigurationService .getString(BYPASS_URL_PROP+"."+commonToolId, pattern);
+		pattern = serverConfigurationService .getString(LEGACY_BYPASS_URL_PROP, DEFAULT_BYPASS_URL);
+		pattern = serverConfigurationService .getString(BYPASS_URL_PROP, pattern);
+		pattern = serverConfigurationService .getString(LEGACY_BYPASS_URL_PROP+"."+commonToolId, pattern);
+		pattern = serverConfigurationService .getString(BYPASS_URL_PROP+"."+commonToolId, pattern);
 		if ( pattern.length() > 1 ) {
 			p = Pattern.compile(pattern);
 			m = p.matcher(uri.toLowerCase());
@@ -986,10 +1052,10 @@ public class SiteHandler extends WorksiteHandler
 		}
 
 		// Check the query string for a pattern match
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP, DEFAULT_BYPASS_QUERY);
-		pattern = ServerConfigurationService .getString(BYPASS_QUERY_PROP, pattern);
-		pattern = ServerConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP+"."+commonToolId, pattern);
-		pattern = ServerConfigurationService .getString(BYPASS_QUERY_PROP+"."+commonToolId, pattern);
+		pattern = serverConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP, DEFAULT_BYPASS_QUERY);
+		pattern = serverConfigurationService .getString(BYPASS_QUERY_PROP, pattern);
+		pattern = serverConfigurationService .getString(LEGACY_BYPASS_QUERY_PROP+"."+commonToolId, pattern);
+		pattern = serverConfigurationService .getString(BYPASS_QUERY_PROP+"."+commonToolId, pattern);
 		String queryString = req.getQueryString();
 		if ( queryString == null ) queryString = "";
 		if ( pattern.length() > 1 ) {
@@ -1012,8 +1078,8 @@ public class SiteHandler extends WorksiteHandler
 	 */
 	public boolean allowBufferContent(HttpServletRequest req, Site site, ToolConfiguration siteTool)
 	{
-		String tidAllow = ServerConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
-		tidAllow = ServerConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
+		String tidAllow = serverConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
+		tidAllow = serverConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
 
 		if (tidAllow.indexOf(":none:") >= 0) return false;
 
@@ -1073,10 +1139,10 @@ public class SiteHandler extends WorksiteHandler
 
 			// Check the response contentType for a pattern match
 			String commonToolId = siteTool.getToolId();
-			String pattern = ServerConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP, DEFAULT_BYPASS_TYPE);
-			pattern = ServerConfigurationService .getString(BYPASS_TYPE_PROP, pattern);
-			pattern = ServerConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP+"."+commonToolId, pattern);
-			pattern = ServerConfigurationService .getString(BYPASS_TYPE_PROP+"."+commonToolId, pattern);
+			String pattern = serverConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP, DEFAULT_BYPASS_TYPE);
+			pattern = serverConfigurationService .getString(BYPASS_TYPE_PROP, pattern);
+			pattern = serverConfigurationService .getString(LEGACY_BYPASS_TYPE_PROP+"."+commonToolId, pattern);
+			pattern = serverConfigurationService .getString(BYPASS_TYPE_PROP+"."+commonToolId, pattern);
 			if ( pattern.length() > 0 ) {
 				String contentType = res.getContentType();
 				if ( contentType == null ) contentType = "";
@@ -1088,8 +1154,8 @@ public class SiteHandler extends WorksiteHandler
 			log.warn("Failed to buffer content.", e);
 			return Boolean.FALSE;
 		}
-		String tidAllow = ServerConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
-		tidAllow = ServerConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
+		String tidAllow = serverConfigurationService.getString(LEGACY_IFRAME_SUPPRESS_PROP, IFRAME_SUPPRESS_DEFAULT);
+		tidAllow = serverConfigurationService.getString(IFRAME_SUPPRESS_PROP, tidAllow);
 		boolean debug = tidAllow.contains(":debug:");
 
 		String responseStr = bufferedResponse.getInternalBuffer();
@@ -1193,14 +1259,14 @@ public class SiteHandler extends WorksiteHandler
 		if (portal.redirectIfLoggedOut(res)) return false;
 
 		// find the tool from some site
-		ToolConfiguration siteTool = SiteService.findTool(placementId);
+		ToolConfiguration siteTool = siteService.findTool(placementId);
 		if (siteTool == null)
 		{
 			return false;
 		}
 
 		// find the tool registered for this
-		ActiveTool tool = ActiveToolManager.getActiveTool(siteTool.getToolId());
+		ActiveTool tool = activeToolManager.getActiveTool(siteTool.getToolId());
 		if (tool == null)
 		{
 			return false;
@@ -1213,7 +1279,7 @@ public class SiteHandler extends WorksiteHandler
 
 			try
 			{
-				SiteService.getSiteVisit(siteTool.getSiteId());
+				siteService.getSiteVisit(siteTool.getSiteId());
 			}
 			catch (IdUnusedException e)
 			{
