@@ -25,13 +25,17 @@ import java.net.URLDecoder;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeSet;
 import java.util.Set;
 
+import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
@@ -124,6 +128,18 @@ public class AssessmentService {
 		}
 	}
 	
+
+	public PublishedAssessmentFacade getPublishedAssessment(String publishedAssessmentId) {
+		try {
+			return PersistenceService.getInstance()
+					.getPublishedAssessmentFacadeQueries().getPublishedAssessment(
+							Long.valueOf(publishedAssessmentId));
+		} catch (Exception e) {
+			log.error(e.getMessage(), e);
+			throw new RuntimeException(e);
+		}
+	}
+
 	public AssessmentIfc getAssessment(Long assessmentId) {
 		try {
 			return PersistenceService.getInstance()
@@ -400,13 +416,26 @@ public class AssessmentService {
 				.removeAllItems(new Long(sourceSectionId));
 	}
 
+	private List<ItemDataIfc> getItemListFromPools(SectionFacade section) {
+		QuestionPoolService qpService = new QuestionPoolService();
+		List<ItemDataIfc> itemlist = qpService.getAllItems(Long.valueOf(section.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW)));
+
+		if (SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOLS.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE))) {
+			Integer randomPools = Integer.valueOf(section.getSectionMetaDataByLabel(SectionDataIfc.RANDOM_POOL_COUNT));
+			for (int i = 1; i < randomPools; i++) {
+				itemlist.addAll(qpService.getAllItems(Long.valueOf(section.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW + "_" + i))));
+			}
+		}
+
+		return itemlist;
+	}
+
 	public boolean verifyItemsDrawSize(SectionFacade section){
 		if (section != null && section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE) != null
-				&& StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString())) {
-			QuestionPoolService qpService = new QuestionPoolService();
-			List itemlist = qpService
-			.getAllItems(Long.valueOf(section
-					.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW)));
+				&& (SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)) ||
+ 				SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOLS.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)))) {
+
+			List<ItemDataIfc> itemlist = getItemListFromPools(section);
 			return verifyItemsDrawSize(itemlist.size(), section.getSectionMetaDataByLabel(SectionDataIfc.NUM_QUESTIONS_DRAWN));
 		}else{
 			return true;
@@ -432,54 +461,121 @@ public class AssessmentService {
 	
 	public int updateRandomPoolQuestions(SectionFacade section, boolean publishing){
 		if (section != null && section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE) != null
-				&& StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString())) {
-
+				&& (SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)) ||
+						SectionDataIfc.FIXED_AND_RANDOM_DRAW_FROM_QUESTIONPOOL.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)) ||
+						SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOLS.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)))) {
+			
 			QuestionPoolService qpService = new QuestionPoolService();
-			List itemlist = qpService.getAllItems(Long.valueOf(section
-					.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW)));
+			ItemService itemService = new ItemService();
+			boolean isFixed = StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.FIXED_AND_RANDOM_DRAW_FROM_QUESTIONPOOL.toString());
+			int i = 0;
+
+			boolean hasRandomPartScore = false;
+			Double score = null;
+			String requestedScore = (section.getSectionMetaDataByLabel(SectionDataIfc.POINT_VALUE_FOR_QUESTION) != null) ? 
+					                 section.getSectionMetaDataByLabel(SectionDataIfc.POINT_VALUE_FOR_QUESTION) : "";
+					                 
+			if (StringUtils.isNotBlank(requestedScore)) {
+				hasRandomPartScore = true;
+				score = new Double(requestedScore);
+			}
+			boolean hasRandomPartDiscount = false;
+			Double discount = null;
+			String requestedDiscount = (section.getSectionMetaDataByLabel(SectionDataIfc.DISCOUNT_VALUE_FOR_QUESTION) != null) ? 
+										section.getSectionMetaDataByLabel(SectionDataIfc.DISCOUNT_VALUE_FOR_QUESTION) : "";
+
+			if (StringUtils.isNotBlank(requestedDiscount)) {
+				hasRandomPartDiscount = true;
+				discount = new Double(requestedDiscount);
+			}
+
+			// random section:
+			removeAllItems(section.getSectionId().toString());
+
+			String agentId = AgentFacade.getAgentString();
+	
+			Iterator itemIter = section.getItemSet().iterator();
+			while (itemIter.hasNext()) {
+				ItemDataIfc item = (ItemDataIfc) itemIter.next();
+				List poolIds = qpService.getPoolIdsByItem(item.getItemId());
+				if (poolIds.isEmpty()) {
+					Long deleteId = item.getItemId();
+					itemService.deleteItem(deleteId, agentId);
+					EventTrackingService.post(EventTrackingService.newEvent(SamigoConstants.EVENT_ASSESSMENT_ITEM_DELETE, "/sam/" +AgentFacade.getCurrentSiteId() + "/removed itemId=" + deleteId, true));
+					itemIter.remove();
+				}
+			}
+			// need to reload
+			section = getSection(section.getSectionId().toString());
+
+			if (isFixed) {
+				int numQuestionsFixed = Integer.parseInt(section.getSectionMetaDataByLabel(SectionDataIfc.NUM_QUESTIONS_FIXED));
+				List<String> fixedQuestionIdsList = new ArrayList<>();
+				for (int j=0; j<numQuestionsFixed; j++) {
+					fixedQuestionIdsList.add(section.getSectionMetaDataByLabel(SectionDataIfc.FIXED_QUESTION_IDS + SectionDataIfc.SEPARATOR_MULTI + (j+1)));
+				}
+
+				for (String itemId : fixedQuestionIdsList) {
+					ItemFacade item = itemService.getItem(itemId);
+					item = qpService.copyItemFacade2(item);
+					item.setSection(section);
+					item.setSequence(Integer.valueOf(i + 1));
+					if (hasRandomPartScore)
+						item.setScore(score);
+					long itemTypeId = item.getTypeId().longValue();
+					String mcmsPartialCredit = item.getItemMetaDataByLabel(ItemMetaDataIfc.MCMS_PARTIAL_CREDIT);
+					if (hasRandomPartDiscount &&
+							(itemTypeId == TypeFacade.MULTIPLE_CHOICE.longValue() || 
+							itemTypeId == TypeFacade.TRUE_FALSE.longValue() || 
+							itemTypeId == TypeFacade.MULTIPLE_CORRECT_SINGLE_SELECTION.longValue() ||
+							(itemTypeId == TypeFacade.MULTIPLE_CORRECT.longValue() && "false".equals(mcmsPartialCredit))))
+						item.setDiscount(discount);
+					ItemDataIfc data = item.getData();
+					Set itemTextSet = data.getItemTextSet();
+					if (itemTextSet != null) {
+						Iterator iterITS = itemTextSet.iterator();
+						while (iterITS.hasNext()) {
+							ItemTextIfc itemText = (ItemTextIfc) iterITS.next();
+							if(publishing){
+								itemText.setText(copyContentHostingAttachments(itemText.getText(), AgentFacade.getCurrentSiteId()));
+							}
+							Set answerSet = itemText.getAnswerSet();
+							if (answerSet != null) {
+								Iterator iterAS = answerSet.iterator();
+								while (iterAS.hasNext()) {
+									AnswerIfc answer = (AnswerIfc) iterAS
+									.next();
+									if(publishing){
+										answer.setText(copyContentHostingAttachments(answer.getText(), AgentFacade.getCurrentSiteId()));
+									}
+									if (hasRandomPartScore) {
+										answer.setScore(score);
+									}
+									if (hasRandomPartDiscount && 
+										(itemTypeId == TypeFacade.MULTIPLE_CHOICE.longValue() || 
+										itemTypeId == TypeFacade.TRUE_FALSE.longValue() || 
+										itemTypeId == TypeFacade.MULTIPLE_CORRECT_SINGLE_SELECTION.longValue() ||
+										(itemTypeId == TypeFacade.MULTIPLE_CORRECT.longValue() && "false".equals(mcmsPartialCredit))))
+										answer.setDiscount(discount);
+								}
+							}
+						}
+					}
+					data.setIsFixed(true);
+					section.addItem(item);
+					EventTrackingService.post(EventTrackingService.newEvent(SamigoConstants.EVENT_ASSESSMENT_SAVEITEM, "/sam/" + AgentFacade.getCurrentSiteId() + "/saved  itemId=" + item.getItemId().toString(), true));
+					i = i + 1;
+				}
+
+				//update meta data for date:
+				//We need this in a standard format so it can be parsed later. This is ISO8601 format -DH
+				DateFormat df = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZZ");
+				section.addSectionMetaData(SectionDataIfc.QUESTIONS_FIXED_DRAW_DATE, df.format(new Date()));
+			}
+			
+			List<ItemDataIfc> itemlist = getItemListFromPools(section);
 
 			if(verifyItemsDrawSize(itemlist.size(), section.getSectionMetaDataByLabel(SectionDataIfc.NUM_QUESTIONS_DRAWN))){
-				// random section:
-				removeAllItems(section.getSectionId().toString());
-
-				ItemService itemService = new ItemService();
-				String agentId = AgentFacade.getAgentString();
-
-				Iterator itemIter = section.getItemSet().iterator();
-				while (itemIter.hasNext()) {
-					ItemDataIfc item = (ItemDataIfc) itemIter.next();
-					List poolIds = qpService.getPoolIdsByItem(item.getItemId());
-					if (poolIds.isEmpty()) {
-						Long deleteId = item.getItemId();
-						itemService.deleteItem(deleteId, agentId);
-						EventTrackingService.post(EventTrackingService.newEvent(SamigoConstants.EVENT_ASSESSMENT_ITEM_DELETE, "/sam/" +AgentFacade.getCurrentSiteId() + "/removed itemId=" + deleteId, true));
-						itemIter.remove();
-					}
-				}
-				// need to reload
-				section = getSection(section.getSectionId().toString());
-
-				// ItemService itemservice = new ItemService();
-				boolean hasRandomPartScore = false;
-				Double score = null;
-				String requestedScore = (section.getSectionMetaDataByLabel(SectionDataIfc.POINT_VALUE_FOR_QUESTION) != null) ? 
-						                 section.getSectionMetaDataByLabel(SectionDataIfc.POINT_VALUE_FOR_QUESTION)	: "";
-						                 
-				if (StringUtils.isNotBlank(requestedScore)) {
-					hasRandomPartScore = true;
-					score = new Double(requestedScore);
-				}
-				boolean hasRandomPartDiscount = false;
-				Double discount = null;
-				String requestedDiscount = (section.getSectionMetaDataByLabel(SectionDataIfc.DISCOUNT_VALUE_FOR_QUESTION) != null) ? 
-											section.getSectionMetaDataByLabel(SectionDataIfc.DISCOUNT_VALUE_FOR_QUESTION) : "";
-
-				if (StringUtils.isNotBlank(requestedDiscount)) {
-					hasRandomPartDiscount = true;
-					discount = new Double(requestedDiscount);
-				}
-
-				int i = 0;
 				Iterator iter = itemlist.iterator();
 				while (iter.hasNext()) {
 					ItemFacade item = (ItemFacade) iter.next();
@@ -994,10 +1090,14 @@ public class AssessmentService {
 
 	} // escapeResourceName
 	
-	public void copyAllAssessments(String fromContext, String toContext, Map<String, String>transversalMap) {
+	public void copyAllAssessments(String fromContext, String toContext, List<String> ids, Map<String, String>transversalMap) {
+		// Assessments can depend on rubrics, so we need to allow access to rubrics
+		SecurityAdvisor secAdv = getSecurityAdvisorForRubricEditing();
+		securityService.pushAdvisor(secAdv);
+
 		try {
 			PersistenceService.getInstance().getAssessmentFacadeQueries()
-				.copyAllAssessments(fromContext, toContext, transversalMap);
+				.copyAllAssessments(fromContext, toContext, ids, transversalMap);
 			List<PublishedAssessmentFacade> publist =
 			    PersistenceService.getInstance().getPublishedAssessmentFacadeQueries()
 			    .getBasicInfoOfAllPublishedAssessments(PublishedAssessmentFacadeQueries.DUE, true, fromContext);
@@ -1011,24 +1111,45 @@ public class AssessmentService {
 				    transversalMap.put(oldRef, newCore);
 			    }
 			}
-
 		} catch (Exception e) {
-			log.error(e.getMessage());
+			log.error("Error while copying assessments", e);
 			throw new RuntimeException(e);
+		} finally {
+			securityService.popAdvisor(secAdv);
 		}
 	}
-	
+
+	private static SecurityAdvisor getSecurityAdvisorForRubricEditing() {
+        return (userId, function, reference) ->
+                "rubrics.editor".equals(function) ? SecurityAdvisor.SecurityAdvice.ALLOWED : SecurityAdvisor.SecurityAdvice.PASS;
+	}
+
 	public void copyAssessment(String assessmentId, String appendCopyTitle) {
+		SecurityAdvisor secAdv = getSecurityAdvisorForRubricEditing();
+		securityService.pushAdvisor(secAdv);
+
 		try {
 			PersistenceService.getInstance().getAssessmentFacadeQueries()
 					.copyAssessment(assessmentId, appendCopyTitle);
 		} catch (Exception e) {
-			log.error(e.getMessage(), e);
+			log.error("Error while copying one assessment: {}", assessmentId, e);
 			throw new RuntimeException(e);
+		} finally {
+			securityService.popAdvisor(secAdv);
 		}
 	}
 
-	public List getAllActiveAssessmentsbyAgent(String fromContext) {
+	public List<PublishedAssessmentData> getAllPublishedAssessmentsForSite(String siteId) {
+		List<PublishedAssessmentData> result = new ArrayList<>();
+		List<PublishedAssessmentFacade> publist = PersistenceService.getInstance().getPublishedAssessmentFacadeQueries().getBasicInfoOfAllPublishedAssessments2(PublishedAssessmentFacadeQueries.DUE, true, siteId);
+		for (PublishedAssessmentFacade facade: publist) {
+			PublishedAssessmentData data = PersistenceService.getInstance().getPublishedAssessmentFacadeQueries().loadPublishedAssessment(facade.getPublishedAssessmentId());
+			result.add(data);
+		}
+		return result;
+	}
+
+	public List<AssessmentData> getAllActiveAssessmentsbyAgent(String fromContext) {
 		try {
 			return PersistenceService.getInstance().getAssessmentFacadeQueries()
 					.getAllActiveAssessmentsByAgent(fromContext);
@@ -1079,7 +1200,11 @@ public class AssessmentService {
 				Set<String> attachments = new HashSet<String>();
 				for (String source : sources) {
 					String theHref = StringUtils.substringBefore(source, "\"");
-					if (StringUtils.contains(theHref, "/access/content/")) {
+
+					if (!StringUtils.startsWith(theHref, "data:")
+							&& StringUtils.contains(theHref, "/access/content/")
+							// Skip attachments associated with user
+							&& !StringUtils.contains(theHref, "/access/content/user/")) {
 						attachments.add(theHref);
 					}
 				}
@@ -1101,6 +1226,7 @@ public class AssessmentService {
 						for (String attachment : attachments) {
 							String resourceIdOrig = "/" + StringUtils.substringAfter(attachment, "/access/content/");
 							String resourceId = URLDecoder.decode(resourceIdOrig);
+							resourceId = resourceId.trim();
 							String filename = StringUtils.substringAfterLast(attachment, "/");
 
 							try {
@@ -1131,6 +1257,68 @@ public class AssessmentService {
 			return text;
 		}
 
+	/**
+	 * Get the set of question pools referenced in an assessment
+	 *
+	 * @param assessment
+	 * @param bundle
+	 * @return
+	 */
+	public Set<String> getQuestionPoolIdsForAssessment(Long assessmentId, boolean published) {
+
+		// get initialized assessment
+		AssessmentIfc assessment;
+
+		if (published) {
+			assessment = (AssessmentIfc) getPublishedAssessment(assessmentId.toString());
+		} else {
+			assessment = (AssessmentIfc) getAssessment(assessmentId);
+		}
+
+		if (assessment == null) {
+			log.warn("Assessment ID {} published {} not found", assessmentId, published);
+			return Collections.emptySet();
+		}
+
+		log.debug("Getting question pools used in assessment id {} published {}", assessmentId, published);
+
+		Set<String> poolIds = new TreeSet<String>();
+
+		// check sections
+		for (Object sectionObj : assessment.getSectionArray()) {
+
+			SectionDataIfc section = (SectionDataIfc) sectionObj;
+			log.debug("Assessment id {} section id {}", assessmentId, section.getSectionId());
+
+			if (StringUtils.equals(
+				section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE),
+				SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString())) {
+                                        Long poolId = Long.valueOf(section.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW));
+					poolIds.add(poolId.toString());
+					log.debug("Assessment {} published {} uses random draw from question pool {}",
+						assessmentId, published, poolId);
+					// No need to look at the questions inside this section
+					continue;
+			}
+
+			// Iterate through items
+			if (StringUtils.equals(
+				section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE),
+				SectionDataIfc.QUESTIONS_AUTHORED_ONE_BY_ONE.toString())) {
+                                List<ItemDataIfc> items = section.getItemArray();
+				for (ItemDataIfc item : items) {
+					String poolId = item.getItemMetaDataByLabel(ItemMetaDataIfc.POOLID);
+					if (StringUtils.isNotEmpty(poolId)) {
+						poolIds.add(poolId);
+						log.debug("Assessment {} published {} has item {} assigned to question pool {}",
+							assessmentId, published, item.getItemId(), poolId);
+					}
+				} //items
+			}
+		} // sections
+
+		return poolIds;
+	}
 
 	/**
 	 * Exports an assessment to mark up text
@@ -1151,7 +1339,7 @@ public class AssessmentService {
 			boolean hasRandomPartDiscount = false;
 			Double discount = null;
 			
-			if (StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.QUESTIONS_AUTHORED_ONE_BY_ONE.toString()))
+			if (SectionDataIfc.QUESTIONS_AUTHORED_ONE_BY_ONE.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)))
   			{
 				items = section.getItemArray();
   			}
@@ -1293,19 +1481,14 @@ public class AssessmentService {
 			SectionFacade section = (SectionFacade)sectionObj;
 			List<ItemDataIfc> items = null;
 			if (section != null) {
-				if (section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE) == null || StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.QUESTIONS_AUTHORED_ONE_BY_ONE.toString()))
+				if (section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE) == null || SectionDataIfc.QUESTIONS_AUTHORED_ONE_BY_ONE.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)))
 				{
 					items = section.getItemArray();
 				}
-				else if (StringUtils.equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE), SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString()))
+				else if (SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOL.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)) 
+					|| SectionDataIfc.RANDOM_DRAW_FROM_QUESTIONPOOLS.toString().equals(section.getSectionMetaDataByLabel(SectionDataIfc.AUTHOR_TYPE)))
 				{
-					QuestionPoolService qpService = new QuestionPoolService();
-					try {
-						Long qpId = Long.valueOf(section.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW));
-						items = qpService.getAllItems(qpId);
-					} catch (NumberFormatException e) {
-						log.error("NumberFormatException converting to Long: " + section.getSectionMetaDataByLabel(SectionDataIfc.POOLID_FOR_RANDOM_DRAW));
-					}
+					items = getItemListFromPools(section);
 				}
 			}
 			if (items == null) {
@@ -1406,5 +1589,17 @@ public class AssessmentService {
 		}
 
 		return rename;
+	}
+
+	public Set<String> getDuplicateItemHashesByAssessmentId(@NonNull Long assessmentId) {
+		return getDuplicateItemHashesForAssessmentIds(Collections.singleton(assessmentId));
+	}
+	
+	public Set<String> getDuplicateItemHashesForAssessmentIds(@NonNull Collection<Long> assessmentIds) {
+		// Eliminate duplicates
+		Set<Long> assessmentIdSet = Set.copyOf(assessmentIds);
+
+		return PersistenceService.getInstance().getAssessmentFacadeQueries()
+				.getDuplicateItemHashesForAssessmentIds(assessmentIdSet);
 	}
 }
